home: Fix major flex layout messup on Safari
Without this, the previous commit causes the top section of the page
to be arranged in three columns.

--- a/wesmere/sass/home/_site_home.scss
+++ b/wesmere/sass/home/_site_home.scss
@@ -238,6 +238,8 @@ $strip-padding:							$measurement-sub;
 
 	box-shadow: inset 0px 0px 2px 2px rgba($wui-text-navlink, 0.4);
 
+	min-width: 100%;
+
 	// Needed for the gallery arrow buttons to not extend past the bottom edge.
 	overflow: hidden;
 }
